--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ buildscript {
         classpath(group: 'commons-codec', name: 'commons-codec', version: '1.10')
         classpath(group: 'commons-logging', name: 'commons-logging', version: '1.2')
         classpath(group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3')
-        classpath(group: 'org.fusesource.jansi', name: 'jansi', version: '1.15')
-        classpath(group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.10', classifier: 'indy')
+        classpath(group: 'org.fusesource.jansi', name: 'jansi', version: '1.16')
+        classpath(group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12', classifier: 'indy')
         classpath(group: 'org.springframework.build.gradle', name: 'propdeps-plugin', version: '0.0.7')
     }
 }
@@ -46,7 +46,7 @@ apply plugin: 'propdeps-eclipse'
 
 compileJava.options.encoding = 'UTF-8'
 
-version = '1.0.4-SNAPSHOT'
+version = '1.2.6-SNAPSHOT'
 
 group = 'com.themodernway'
 
@@ -165,8 +165,10 @@ sourceSets {
 }
 
 dependencies {
-    compile(group: 'com.themodernway', name: 'themodernway-common', version: '1.0.4-RELEASE')
-    provided(group: 'com.google.gwt', name: 'gwt-user', version: '2.8.0')
+    compile(group: 'com.themodernway', name: 'themodernway-common', version: '1.2.6-RELEASE')
+    provided(group: 'com.google.gwt', name: 'gwt-user', version: '2.8.2')
+    provided(group: 'com.google.gwt', name: 'gwt-elemental', version: '2.8.2')
+    
 }
 
 artifacts {
